...
            style="@style/Widget.Design.TextInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp">

            <com.google.android.material.textfield.MaterialAutoCompleteTextView
                android:id="@+id/input_taxon_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Species name (Latin or Swedish)"
                android:textSize="18sp"
                android:inputType="textCapSentences"
                android:completionThreshold="1" />
...
            style="@style/Widget.Design.TextInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp">

            <com.google.android.material.textfield.MaterialAutoCompleteTextView
                android:id="@+id/edit_locality"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Description of where the location is"
                android:textSize="18sp"
                android:inputType="textPersonName"
                android:completionThreshold="0" />
...
            style="@style/Widget.Design.TextInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/input_organism_quantity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Quantity / Number of individuals"
                android:textSize="18sp"
                android:inputType="number" />
        </com.google.android.material.textfield.TextInputLayout>
...
            style="@style/Widget.Design.TextInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/input_note"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:hint="General notes / occurrence remarks..."
                android:minLines="2"
                android:gravity="top"
...
            style="@style/Widget.Design.TextInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp">

            <com.google.android.material.textfield.MaterialAutoCompleteTextView
                android:id="@+id/input_collector"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Collector(s) name(s)"
                android:textSize="18sp"
                android:inputType="textPersonName"
                android:completionThreshold="0" />
...
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="20dp">

            <CheckBox
                android:id="@+id/checkbox_is_specimen"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:text="Is a Collection" />

            <TextView
...
                android:layout_weight="1"
                android:text="Discard"
                android:backgroundTint="#FF5252"
                android:layout_marginEnd="4dp"/>

            <Button
                android:id="@+id/btn_save_detail"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Save Location"
                android:layout_marginStart="4dp"/>
        </LinearLayout>
...
